# resume-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
agents/: analyzer_agent.py  application_agent.py  critique_agent.py  orchestrator.py  rewriter_agent.py  scraper_agent.py
api/: main.py
configs/: prompts.yaml
core/: config.py  llm_client.py  memory.py  models.py
eval/: benchmark_ats.py  evaluator.py  metrics.py  run_eval.py
eval/fixtures/: sample_jd.txt  sample_resume.txt
parsers/: pdf_parser.py
scripts/: run_agent.py
tests/: conftest.py  test_agents.py  test_api.py  test_llm_client.py  test_memory.py  test_orchestrator.py
tools/: ats_scorer.py
