[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "WARNING"
addopts = "-v --tb=short"

[project]
name = "job-application-agent"
version = "1.0.0"
description = "AI-powered multi-agent resume optimizer and job application assistant"
requires-python = ">=3.10"
